--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <section class="home" id="home">
                 <div class="homeContent">
                     <div class="homeImage">
-                        <a href="index.html"><img src="./Assets/image/icon.jpg" alt="icon"></a>
+                        <a href="index.html"><img src="./Assets/image/icon.JPG" alt="icon"></a>
                     </div>
                     <div class="intro">
                         <h2 id="name"> Chun Kit Li</h2>
